--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -40,7 +40,7 @@ const episodesBySeasons = Object.fromEntries(
 const seasons = Object.keys(episodesBySeasons).map(Number).sort((a, b) => b - a);
 ---
 
-<div class="wrapper mx-auto px-5 py-7 flex flex-col lg:flex-row lg:max-w-6xl">
+<div class="mx-auto px-5 py-7 flex flex-col lg:flex-row lg:max-w-6xl">
     <div class="lg:mr-4 flex-grow-0 flex-shrink-0 basis-[500px]">
         <div class="lg:fixed lg:top-1/2 lg:-translate-y-1/2">
             <div class="flex flex-col items-center text-center max-w-[472px] mx-auto">
