--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -234,32 +234,16 @@
 }
 
 @layer components {
-  aside {
-    @media (min-width: 1100px) {
-      @apply flex-none w-[275px] ml-4;
-    }
+  .toc-link.active {
+    @apply bg-slate-600;
   }
 
-  /* .toc {
-    @media (min-width: 1100px) {
-      @apply sticky top-8 max-h-[calc(100vh-4rem)] overflow-y-auto;
-    }
-  } */
-
-  .toc-link.active {
-    @apply bg-[#4F5B66];
-  } 
-
-  .message {
-    @apply flex flex-col mb-4 relative max-w-[85%] md:max-w-[75%];
-
-    & a {
-      @apply no-underline;
-    }
+  .message {            
+    @apply flex flex-col m-0 relative max-w-[85%] md:max-w-[75%];
   }
 
   .message-bubble {
-    @apply px-4 py-3 rounded-[18px] bg-[color:var(--color-his-chat-default)] break-words hyphens-auto;
+    @apply px-4 py-3 rounded-[18px] bg-his-chat-default break-words;
 
     & strong {
       @apply mb-1 font-bold;
@@ -267,7 +251,7 @@
   }
 
   .message-time {
-    @apply text-xs text-flexoki-light-bg font-mono mt-0.5 block;
+    @apply text-xs text-flexoki-light-bg font-mono mt-0.5 block mb-3;
   }
 
   .message:hover {
@@ -276,39 +260,70 @@
     }
   }
 
-  .message-sent {
+  /* Right-aligned messages (sent & system) */
+  .message-sent, .message-system {
     @apply ml-auto;
 
     & .message-bubble {
-      @apply bg-[color:var(--color-his-chat-blue)];
+      @apply rounded-[18px] rounded-br-[4px];
     }
 
     & .message-time {
       @apply text-right;
     }
+
+    &.consecutive {
+      @apply mt-0.5;
+
+      & .message-bubble {
+        @apply rounded-[18px];
+      }
+/* 
+      & .message-time {
+        @apply hidden;
+      } */
+    }
+
+    &.consecutive-end .message-bubble {
+      @apply rounded-[18px] rounded-br-[4px];
+    }
   }
 
+  /* Color overrides for different message types */
+  .message-sent .message-bubble {
+    @apply bg-his-chat-blue;
+  }
+
+  .message-system .message-bubble {
+    @apply bg-his-chat-default;
+  }
+
+  /* Left-aligned messages (received) */
   .message-received {
     @apply mr-auto;
 
     & .message-bubble {
-      @apply bg-[color:var(--color-his-chat-other)];
+      @apply bg-his-chat-other rounded-[18px] rounded-bl-[4px];
     }
 
     & .message-time {
       @apply text-left;
     }
-  }
 
-  .message-system {
-    @apply ml-auto;
+    &.consecutive {
+      @apply mt-0.5;
 
-    & .message-bubble {
-      @apply bg-[color:var(--color-his-chat-default)];
+      & .message-bubble {
+        @apply rounded-[18px];
+      }
+
+      /* & .message-time {
+        @apply hidden;
+      } */
     }
 
-    & .message-time {
-      @apply text-right;
+    &.consecutive-end .message-bubble {
+      @apply rounded-[18px] rounded-bl-[4px];
     }
   }
 } 
