--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,4 +1,4 @@
-<footer class="text-center pb-[70px]">
+<footer class="pt-4 pb-[70px] text-sm">
   <div>
     Hosts:{" "}
     <a href="https://twitter.com/nayafia">
@@ -15,7 +15,6 @@
       Ken Wheeler
     </a>
   </div>
-  All rights reserved
   <div>
     Supported via{" "}
     <a 
