--- a/src/components/Testimonial.astro
+++ b/src/components/Testimonial.astro
@@ -3,71 +3,46 @@
 
 <div class="testimonials">
   <a href="https://twitter.com/left_pad/status/1052290013059153920">
-    <h3>Praise</h3>
+    <h3>—— Praise</h3>
   </a>
 
-  <blockquote class="twitter-tweet tw-align-center" data-lang="en">
-    <p lang="en" dir="ltr">
+  <blockquote>
+    <p class="not-italic">
       Really been enjoying the Hope in Source podcast from{" "}
-      <a href="https://twitter.com/nayafia?ref_src=twsrc%5Etfw">@nayafia</a>{" "}
+      <a href="https://twitter.com/nayafia">@nayafia</a>{" "}
       and{" "}
-      <a href="https://twitter.com/left_pad?ref_src=twsrc%5Etfw">@left_pad</a>.
+      <a href="https://twitter.com/left_pad">@left_pad</a>.
     </p>
-    &mdash; Nicholas C. Zakas (@slicknet){" "}
-    <a href="https://twitter.com/slicknet/status/1059181425184755713?ref_src=twsrc%5Etfw">
-      November 4, 2018
-    </a>
+    <p>
+      Nicholas C. Zakas <a href="https://twitter.com/slicknet/status/1059181425184755713">(@slicknet)</a>
+    </p>
   </blockquote>
 
-  <blockquote class="twitter-tweet tw-align-center" data-conversation="none" data-lang="en">
-    <p lang="en" dir="ltr">
+  <blockquote>
+    <p class="not-italic">
       Just listened to the first episode and one of the things that came to
       mind is the connection between motivation for giving and anticipated
       benefits/rewards, as with the prosperity gospel movement. I wonder
       what the parallels between that and Open source might be
     </p>
-    &mdash; jory burson (@jorydotcom){" "}
-    <a href="https://twitter.com/jorydotcom/status/1052646871154548738?ref_src=twsrc%5Etfw">
-      October 17, 2018
-    </a>
+    <p>
+      jory burson <a href="https://twitter.com/jorydotcom/status/1052646871154548738">(@jorydotcom)</a>
+    </p>
   </blockquote>
 
-  <blockquote class="twitter-tweet tw-align-center" data-lang="en">
-    <p lang="en" dir="ltr">
+  <blockquote>
+    <p class="not-italic">
       Really encouraged by{" "}
-      <a href="https://twitter.com/left_pad?ref_src=twsrc%5Etfw">@left_pad</a>{" "}
+      <a href="https://twitter.com/left_pad">@left_pad</a>{" "}
       and{" "}
-      <a href="https://twitter.com/nayafia?ref_src=twsrc%5Etfw">@nayafia</a>
+      <a href="https://twitter.com/nayafia">@nayafia</a>
       &#39;s podcast series &quot;Hope In Source&quot;. Not only from the
       insightful discussions and parallels drawn, but also by their
       commitment to learn and explore some of the greater questions in life
       with a childlike heart of awe and wonder.
     </p>
-    &mdash; Jonathan Tsao (@JonathanTsao){" "}
-    <a href="https://twitter.com/JonathanTsao/status/1053342917014753281?ref_src=twsrc%5Etfw">
-      October 19, 2018
-    </a>
+    <p>
+      Jonathan Tsao <a href="https://twitter.com/JonathanTsao/status/1053342917014753281">(@JonathanTsao)</a>
+    </p>
   </blockquote>
 </div>
-
-<!-- <script is:inline define:vars={{ selector: '.testimonials' }}>
-  // Intersection Observer to load Twitter widgets only when testimonials are visible
-  const observer = new IntersectionObserver((entries) => {
-    entries.forEach(entry => {
-      if (entry.isIntersecting) {
-        const script = document.createElement('script');
-        script.src = 'https://platform.twitter.com/widgets.js';
-        script.async = true;
-        document.body.appendChild(script);
-        observer.disconnect();
-      }
-    });
-  });
-
-  document.addEventListener('DOMContentLoaded', () => {
-    const testimonials = document.querySelector(selector);
-    if (testimonials) {
-      observer.observe(testimonials);
-    }
-  });
-</script>  -->
