new: unpacking, fix links

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -24,7 +24,7 @@ const isMainPage = slug === '';
 <meta name="generator" content={Astro.generator} />
 
 <!-- Preconnect to external domains -->
-<link rel="preconnect" href="https://media.transistor.fm" />
+<link rel="preconnect" href="https://anchor.fm" />
 
 <!-- Preload critical assets -->
 {isMainPage && 
