--- a/src/components/Subscribe.astro
+++ b/src/components/Subscribe.astro
@@ -11,8 +11,8 @@ import {hisMetadata} from "@/metadata.ts";
     Spotify
   </a>{" "}
   &bull;{" "}
-  <a href={hisMetadata.google} target="_blank" rel="noreferrer">
-    Google
+  <a href={hisMetadata.youtube} target="_blank" rel="noreferrer">
+    Youtube
   </a>{" "}
   &bull;{" "}
   <a
